# UI Fixed Yosemite Status Item issue by having it work on mouse up rather than mouse down. # Model Fixed security scope issue with GLACollectedFile. Fixed remove highlighted item also when collected file is removed issue. Removed -collectionWithUUID method from GLAProjectManager

--- a/Blik Mac/Base.lproj/MainMenu.xib
+++ b/Blik Mac/Base.lproj/MainMenu.xib
@@ -355,7 +355,7 @@ DQ
                             </menuItem>
                             <menuItem title="Add Contacts Collection…" hidden="YES" keyEquivalent="C" id="McO-7U-HxW"/>
                             <menuItem isSeparatorItem="YES" id="igl-0Q-9Ql"/>
-                            <menuItem title="Change Application to Open Files of Type…" id="mBU-GE-fzv">
+                            <menuItem title="Change Preferred Applications…" id="mBU-GE-fzv">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                             </menuItem>
                         </items>
