--- a/Blik Mac/GLAEmptyAllProjectsViewController.xib
+++ b/Blik Mac/GLAEmptyAllProjectsViewController.xib
@@ -5,24 +5,24 @@
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="GLANoNowProjectViewController">
+        <customObject id="-2" userLabel="File's Owner" customClass="GLAEmptyAllProjectsViewController">
             <connections>
-                <outlet property="mainLabel" destination="yoq-Cf-9Lp" id="1VZ-G4-rRM"/>
-                <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
+                <outlet property="mainLabel" destination="4LR-Ek-xhw" id="xpz-8u-Yix"/>
+                <outlet property="view" destination="jFl-Af-Lp9" id="STk-wy-8KI"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="Hz6-mo-xeY">
+        <customView id="jFl-Af-Lp9">
             <rect key="frame" x="0.0" y="0.0" width="500" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField verticalHuggingPriority="750" misplaced="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yoq-Cf-9Lp">
-                    <rect key="frame" x="101" y="113" width="298" height="46"/>
+                <textField verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4LR-Ek-xhw">
+                    <rect key="frame" x="98" y="113" width="304" height="46"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="300" id="zYl-ND-qcC"/>
+                        <constraint firstAttribute="width" constant="300" id="alb-Bm-Xii"/>
                     </constraints>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Create a project using the + in the top right, and click ‘Work On Now’ to have it appear here." id="1s9-GN-TMk">
+                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Create projects using the + in the top right corner. They will all be listed here." id="GbU-JP-EXc">
                         <font key="font" size="13" name="AvenirNext-Medium"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -30,10 +30,10 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="yoq-Cf-9Lp" secondAttribute="centerX" id="5t5-5E-WpV"/>
-                <constraint firstAttribute="centerY" secondItem="yoq-Cf-9Lp" secondAttribute="centerY" id="i0x-Cv-bgk"/>
+                <constraint firstAttribute="centerX" secondItem="4LR-Ek-xhw" secondAttribute="centerX" id="03w-XV-saq"/>
+                <constraint firstAttribute="centerY" secondItem="4LR-Ek-xhw" secondAttribute="centerY" id="tpb-t9-JGE"/>
             </constraints>
-            <point key="canvasLocation" x="402" y="78"/>
+            <point key="canvasLocation" x="266" y="186"/>
         </customView>
     </objects>
 </document>
