--- a/Blik Mac/GLAMainWindowController.xib
+++ b/Blik Mac/GLAMainWindowController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
@@ -14,26 +14,26 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" appearanceType="lightContent" frameAutosaveName="Main" animationBehavior="default" id="F0z-JX-Cv5" customClass="GLAMainWindow">
+        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" appearanceType="aqua" frameAutosaveName="Main" animationBehavior="default" id="F0z-JX-Cv5" customClass="GLAMainWindow">
             <windowStyleMask key="styleMask" resizable="YES"/>
             <windowCollectionBehavior key="collectionBehavior" canJoinAllSpaces="YES"/>
             <windowPositionMask key="initialPositionMask" topStrut="YES"/>
-            <rect key="contentRect" x="488" y="524" width="500" height="320"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
-            <value key="minSize" type="size" width="500" height="314"/>
+            <rect key="contentRect" x="488" y="524" width="520" height="320"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
+            <value key="minSize" type="size" width="520" height="320"/>
             <value key="maxSize" type="size" width="800" height="5000"/>
             <view key="contentView" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="500" height="320"/>
+                <rect key="frame" x="0.0" y="0.0" width="520" height="320"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <customView identifier="mainNavigation" translatesAutoresizingMaskIntoConstraints="NO" id="IAs-3U-KCq" customClass="GLAView">
-                        <rect key="frame" x="0.0" y="277" width="500" height="43"/>
+                        <rect key="frame" x="0.0" y="277" width="520" height="43"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="43" id="Yq4-h7-UvZ"/>
                         </constraints>
                     </customView>
                     <customView identifier="content" translatesAutoresizingMaskIntoConstraints="NO" id="lUf-gC-iRj" customClass="GLAView">
-                        <rect key="frame" x="0.0" y="0.0" width="500" height="277"/>
+                        <rect key="frame" x="0.0" y="0.0" width="520" height="277"/>
                     </customView>
                 </subviews>
                 <constraints>
@@ -49,6 +49,7 @@
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
+            <point key="canvasLocation" x="455" y="254"/>
         </window>
     </objects>
 </document>
